argocd/prometheus/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitor
  labels:
    app: prometheus-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitor
  labels:
    app: prometheus
spec:
  hosts:
    - "*"
  gateways:
    - monitor/prometheus-gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      rewrite:
        uri: /
      route:
        - destination:
            host: prometheus-kube-prometheus-prometheus.monitor.svc.cluster.local
            port:
              number: 9090
